<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.Configurations">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/configurations"
                android:textSize="32sp"
                android:textColor="#000000" />

        </LinearLayout>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:id="@+id/cb_rightEye"
            android:layoutDirection="rtl"
            android:checked="true"
            android:textSize="18sp"
            android:textColor="#000000"
            android:text="@string/consider_right_eye"
            tools:targetApi="jelly_bean_mr1" />


        <TextView
            android:id="@+id/lb_rValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/closing_senstivity_50"
            tools:layout_editor_absoluteX="5dp"
            tools:layout_editor_absoluteY="32dp" />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sb_Reye"
            android:layout_marginLeft="20dp" />


        <CheckBox
            android:id="@+id/cb_LeftEye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="30dp"
            android:checked="true"
            android:layoutDirection="rtl"
            android:textSize="18sp"
            android:textColor="#000000"
            android:text="@string/consider_left_eye" />

        <TextView
            android:id="@+id/lb_lValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/closing_senstivity_50"
            android:layout_marginLeft="30dp"
            tools:layout_editor_absoluteX="5dp"
            tools:layout_editor_absoluteY="32dp" />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sb_Leye"
            android:layout_marginLeft="20dp" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginLeft="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#000000"
            android:text="@string/number_of_alerts"
            tools:layout_editor_absoluteX="5dp"
            tools:layout_editor_absoluteY="52dp" />

        <EditText
            android:id="@+id/txt_Num_of_Alerts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            android:ems="10"
            android:hint="@string/e_g_3"
            android:inputType="number" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:textSize="18sp"
            android:textColor="#000000"
            android:text="@string/alert_to_send" />

       <EditText
            android:id="@+id/txt_Message"
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:lines="5"
            android:hint="@string/your_text_is_here"
            android:layout_marginStart="20dp"
            android:importantForAutofill="no"
            android:inputType="textMultiLine" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:textColor="#000000"
            android:text="@string/vehical_reg_number" />


        <EditText
            android:id="@+id/txt_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/e_g_0800_087_86"
            android:inputType="phone"
            android:layout_marginLeft="20dp"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drowsiness_duration"
            android:layout_marginLeft="30dp"
            android:textSize="18sp"
            android:textColor="#000000"

            tools:layout_editor_absoluteX="5dp"
            tools:layout_editor_absoluteY="32dp"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/lb_drowsyvalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:text="@string/drowsyness_duration_700"
            tools:layout_editor_absoluteX="5dp"
            tools:layout_editor_absoluteY="32dp" />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sb_Drowsiness_Duration"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_configure_numbers"
                android:layout_width="167dp"
                android:layout_height="wrap_content"
                android:background="@drawable/round_btn_blue"
                android:text="@string/configure_numbers" />

            <Button
                android:id="@+id/btn_save_settings"
                android:layout_width="118dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25sp"
                android:background="@drawable/round_btn_green"
                android:text="@string/save_settings"


                />

    </LinearLayout>

</LinearLayout>

</ScrollView>